--- a/appsscript.json
+++ b/appsscript.json
@@ -1,7 +1,15 @@
 {
   "timeZone": "Europe/Paris",
   "dependencies": {
+    "enabledAdvancedServices": [{
+      "userSymbol": "Sheets",
+      "serviceId": "sheets",
+      "version": "v4"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
+  "executionApi": {
+    "access": "DOMAIN"
+  },
   "runtimeVersion": "V8"
 }
